template_ID_preview is crashing the blender's UI from branch 2.8 #50958

Closed
opened 2017-03-16 00:51:28 +01:00 by Germano Cavalcante · 6 comments

System Information
windows 64

Exact steps for others to reproduce the error

  • Go to the UV/Image Editor;
  • Go to 'PAINT' mode;
  • Display Tools Shelf (T);
  • Uncollapse Texture category;
  • CRASH;
**System Information** windows 64 **Exact steps for others to reproduce the error** - Go to the UV/Image Editor; - Go to 'PAINT' mode; - Display Tools Shelf (T); - Uncollapse `Texture` category; - CRASH;
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Julian Eisel was assigned by Germano Cavalcante 2017-03-16 00:51:51 +01:00
Member

Added subscriber: @MikeErwin

Added subscriber: @MikeErwin
Member

More info:

Crashes in ui_id_icon_get

* thread #1: ui_id_icon_get(C=0x0000000103406898, id=0x0000000000000000, big=true) + 34 at interface_icons.c:1259, reason = EXC_BAD_ACCESS

-> 1259 switch (GS(id->name)) {
   1260    case ID_BR:
   1261       iconid = ui_id_brush_get_icon(C, id);

because template_ID passes in id=NULL

   431 if (use_preview_icon) {
-> 432    ui_def_but_icon(but, ui_id_icon_get(C, id, use_big_size), UI_HAS_ICON | UI_BUT_ICON_PREVIEW);
   433 }
More info: Crashes in `ui_id_icon_get` ``` * thread #1: ui_id_icon_get(C=0x0000000103406898, id=0x0000000000000000, big=true) + 34 at interface_icons.c:1259, reason = EXC_BAD_ACCESS -> 1259 switch (GS(id->name)) { 1260 case ID_BR: 1261 iconid = ui_id_brush_get_icon(C, id); ``` because `template_ID` passes in id=NULL ``` 431 if (use_preview_icon) { -> 432 ui_def_but_icon(but, ui_id_icon_get(C, id, use_big_size), UI_HAS_ICON | UI_BUT_ICON_PREVIEW); 433 } ```
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Grrr... seems like auto-closing is failing... Closed by commit 7eecc2e1c4.

Grrr... seems like auto-closing is failing... Closed by commit 7eecc2e1c4.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50958
No description provided.