Fix T50958: `template_ID_preview` is crashing the blender's UI from branch 2.8

So apparently ID pointer is allowed to be NULL here.