source/blender/editors/interface/interface_templates.c
@@ -429,7 +429,8 @@ static void template_ID(
 		but = uiDefBlockButN(block, id_search_menu, MEM_dupallocN(template), "", 0, 0, width, height,
 		                     TIP_(template_id_browse_tip(type)));
 		if (use_preview_icon) {
-			ui_def_but_icon(but, ui_id_icon_get(C, id, use_big_size), UI_HAS_ICON | UI_BUT_ICON_PREVIEW);
+			int icon = id ? ui_id_icon_get(C, id, use_big_size) : RNA_struct_ui_icon(type);
+			ui_def_but_icon(but, icon, UI_HAS_ICON | UI_BUT_ICON_PREVIEW);
 		}
 		else {
 			ui_def_but_icon(but, RNA_struct_ui_icon(type), UI_HAS_ICON);
